<resources>
    <string name="lista_pedido_precio_unidad">Precio unidad:</string>
    <string name="lista_pedido_precio_total">Precio total:</string>
    <string name="lista_pedido_cantidad">Cantidad: </string>
    <string name="lista_pedido_button_cancelar">Cancelar</string>
    <string name="lista_pedido_button_confirmar">Confirmar</string>
    <string name="lista_pedido_descripcion_imagen">detalle de la imagen</string>
    <string name="lista_pedido_title">Lista Pedido</string>
    <string name="lista_pedido_confirm_dialog_message">¿De verdad desea confirmar el pedido?</string>
    <string name="lista_pedido_confirm_dialog_title">Confirmar pedido</string>
    <string name="lista_pedido_confirm_button_cancel">Cancelar</string>
    <string name="lista_pedido_confirm_button_ok">"O"k</string>
    <string name="lista_pedido_cancel_dialog_message">¿De verdad desea cancelar el pedido?</string>
    <string name="lista_pedido_cancel_dialog_title">Cancelar pedido</string>
    <string name="lista_pedido_cancel_button_cancel">Cancelar</string>
    <string name="lista_pedido_cancel_button_ok">"O"k</string>
    <string name="lista_pedido_button_edit">Editar</string>
    <string name="lista_pedido_button_delete_all">Marcar Todo</string>
    <string name="lista_pedido_button_delete_cancel">Cancelar</string>
    <string name="lista_pedido_button_delete_confirm">Borrar</string>
    <string name="lista_pedido_button_change_quantity">Cambiar Cantidad</string>
    <string name="lista_pedido_button_go_to_categorias">Seguir pidiendo</string> 
    <string name="categorias_button_lista_pedidos">Lista Pedidos</string>
    <string name="app_name">Servinow</string>
    <string name="menu_settings">Settings</string>
    <string name="paymentmethoddialog_title">Seleccionar método de pago</string>
    <string name="paymentmethoddialog_normal">Efectivo</string>
    <string name="paymentmethoddialog_paypal">PayPal</string>
    <string-array name="paymentmethoddialog">
       <item>@string/paymentmethoddialog_normal</item>
       <item>@string/paymentmethoddialog_paypal</item>
   </string-array>
	<string name="title_activity_main">Servinow</string>
	<string name="qrreading_loading">Entregando carta&#8230;</string>
	<string name="mainactivity_qrreading">Leer QR del restaurante</string>
	<string name="mainactivity_directtorestaurant">Ir directamente a un restaurante (only for TEST)</string>
	<string name="mainactivity_welcome">Bienvenido a Servinow. Lea el código QR de su mesa o busque restaurantes cercanos en nuestro mapa.</string>
	<string name="mainactivity_gotomap">Ver restaurantes Servinow cercanos</string>

	<string name="checkstateactivity_check">Estado del Pedido</string>
    <string name="checkstateactivity_cancelar">Cancelar</string>
    <string name="checkstateactivity_servido">Servido</string>
    <string name="checkstateactivity_encola">En cola...</string>
    <string name="checkstateactivity_encocina">En cocina...</string>
    <string name="checkstateactivity_preparado">Preparado</string>
    <string name="checkstateactivity_cancelar_elem">¿Cancelar este plato?</string>
    <string name="checkstateactivity_si">Sí</string>
    <string name="checkstateactivity_no">No</string>
    <string name="checkstate_button_ticket">Pagar</string>
    <string name="checkstate_pagado">- Pedidos Pagados -</string>
    


	<string name="activity_ticket_title">Ticket</string>
	<string name="activity_ticket_unit_price_label">"Precio unitario: "</string>
	<string name="activity_ticket_quantity_label">"x"</string>
	<string name="activity_ticket_menu_back">Volver</string>
	<string name="activity_ticket_menu_pay">Pagar</string>
	<string name="activity_ticket_subtotal">Sub total: %1$.2f€</string>
	<string name="activity_ticket_tax">IVA(%1$.2f%%): %2$.2f€</string>
	<string name="activity_ticket_total">Total: %1$.2f€</string>
	<string name="activity_ticket_normalpaymentinprocess">La cuenta ha sido solicitada. Espere al cobrador para finalizar el pago.</string>
	<string name="activity_ticket_paymentfailure">El pago no ha sido efectuado con éxito.</string>
	<string name="activity_ticket_paymentcancelled">Pago cancelado.</string>
</resources>
