<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/lista_pedido_bar_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="visible" >

            <Button
                android:id="@+id/lista_pedido_button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lista_pedido_button_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lista_pedido_bar_delete_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="invisible" >

            <Button
                android:id="@+id/lista_pedido_button_delete_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lista_pedido_button_delete_cancel" />

            <Button
                android:id="@+id/lista_pedido_button_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lista_pedido_button_delete_all" />

            <Button
                android:id="@+id/lista_pedido_button_delete_confirm"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lista_pedido_button_delete_confirm" />

        </LinearLayout>

    </RelativeLayout>

    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/relative1"
        android:layout_below="@id/relative" >

    </ListView>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lista_pedido_precio_total" />

            <TextView
                android:id="@+id/lista_pedido_precio_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >
	
	        <Button
	            android:id="@+id/lista_pedido_button_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableStart="@android:drawable/ic_delete"
	        />
	          
	        <Button
	            android:id="@+id/lista_pedido_button_confirm"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableStart="@android:drawable/ic_menu_add"
	        />

    	</LinearLayout>

    </RelativeLayout>

</RelativeLayout>